# numero

./: .gitignore  CMakeLists.txt  LICENSE
demo/: CMakeLists.txt  demo.cpp
demo/data/: example_english_numbers.txt  example_german_numbers.txt  example_numbers.txt  example_numerals.txt
generator/: CMakeLists.txt  generator.cpp
include/numero/: numero.h
perf/: CMakeLists.txt  perf.cpp
src/numero/: numero.cpp
test/: CMakeLists.txt  test.cpp
